# divisi-toolkit

./: README.md  pyproject.toml  slice_finding_adult.ipynb  slice_finding_adult_experiment.ipynb
client/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: ActionMenuButton.svelte  App.svelte  ForceScatterPlot.svelte  IncrementButtons.svelte  ScoreWeightMenu.svelte  SliceCurationView.svelte  SliceOverlapPlot.svelte  SliceRow.svelte  SliceTable.svelte  SliceUpsetPlot.svelte  TableCellBar.svelte  app.css  slice.type.ts  utils.ts
client/src/configuration/: ConfigurationView.svelte  MetricConfiguration.svelte  ScoreFunctionConfiguration.svelte  SearchScopeConfiguration.svelte
client/src/metric_charts/: BarSegment.svelte  Column.svelte  SliceMetricBar.svelte  SliceMetricCategoryBar.svelte  SliceMetricHistogram.svelte  TableCellBar.svelte
client/src/overlap_views/: ForceScatterPlot.svelte  SliceCurationView.svelte  SliceOverlapPlot.svelte  force_layout_worker.js  slice_glyphs.ts
divisi/: discretization.py  sampling.py  slices.py  widget.py
divisi/static/: style.css  widget-main.js
example_data/: airline_data.ipynb  example_adult.ipynb  test-airline.csv
slice_finding/: 230125_naive_implementation.ipynb  __init__.py  api.py  discretization.py  filters.py  old_score_functions.py  recursive.py  sampling.py  scores.py  slice_finding.ipynb  slices.py  utils.py  widget.py
slice_finding/static/: style.css  widget-main.js
spark/: Ranked_Slices.ipynb  SliceScore.ipynb  Slicing_Entropy.ipynb  housing_discrete.csv  outcome_bins.csv
(+15 files in other folders)
